changed read more format

--- a/views/readMoreSlides/applicationsKlystron.pug
+++ b/views/readMoreSlides/applicationsKlystron.pug
@@ -1,6 +1,6 @@
 div.row.featurette
   div.col-md-12
-    h4.card-title 
+    h2.featurette-heading 
       | Application Examples - Klystron Test Stand
 div.row.featurette
   div.col-md-5
