--- a/views/readMoreSlides/architecture.pug
+++ b/views/readMoreSlides/architecture.pug
@@ -1,6 +1,6 @@
 div.row.featurette
   div.col-md-7
-    h4.card-title Blinky-Lite Architecture
+    h2.featurette-heading Blinky-Lite Architecture
     h5.card-major-bullet
       | Inexpensive wireless linux computers (Raspberry Pi) 
       span.card-minor-minor-bullet
