--- a/views/readMoreSlides/componentsMQTT.pug
+++ b/views/readMoreSlides/componentsMQTT.pug
@@ -1,6 +1,6 @@
 div.row.featurette
   div.col-md-7
-    h4.card-title 
+    h2.featurette-heading 
       | Blinky-Lite Components - 
       a(href='http://mqtt.org/', target='_blank') MQTT
     h5.card-major-bullet
