--- a/views/readMoreSlides/componentsMicro.pug
+++ b/views/readMoreSlides/componentsMicro.pug
@@ -1,6 +1,6 @@
 div.row.featurette
   div.col-md-12
-    h4.card-title Blinky-Lite Components - USB based microcontrollers
+    h2.featurette-heading Blinky-Lite Components - USB based microcontrollers
 div.row.featurette
   div.col-md-2
     h6.card-title 
