--- a/views/readMoreSlides/componentsNodeRed.pug
+++ b/views/readMoreSlides/componentsNodeRed.pug
@@ -1,6 +1,6 @@
 div.row.featurette
   div.col-md-7
-    h4.card-title 
+    h2.featurette-heading 
       | Blinky-Lite Components - 
       a(href='https://nodered.org/', target='_blank') Node-RED
     h5.card-major-bullet
