--- a/views/readMoreSlides/componentsRaspi.pug
+++ b/views/readMoreSlides/componentsRaspi.pug
@@ -1,9 +1,9 @@
 div.row.featurette
   div.col-md-12
-    h4.card-title 
+    h2.featurette-heading 
       | Blinky-Lite Components - 
       a(href='https://www.raspberrypi.org/') Raspberry Pi
-      span.card-title  3 and Zero
+      span.featurette-heading  3 and Zero
 div.row.featurette
   div.col-md-2
     img(src='/img/readmore/raspi1.png',width='100%') 
