--- a/views/readMoreSlides/theFuture.pug
+++ b/views/readMoreSlides/theFuture.pug
@@ -1,6 +1,6 @@
 div.row.featurette
   div.col-md-12
-    h4.card-title The Future
+    h2.featurette-heading The Future
     h5.card-major-bullet
       | The Ideal Control System Platform - : 
     ul
