--- a/views/readMoreSlides/theProblem.pug
+++ b/views/readMoreSlides/theProblem.pug
@@ -1,6 +1,6 @@
 div.row.featurette
   div.col-md-12
-    h4.card-title The Problem
+    h2.featurette-heading The Problem
     h5.card-major-bullet
       | Today’s high-tech startup companies often require careful monitoring and control of research processes
     h5.card-major-bullet
