--- a/views/readMoreSlides/theSolution.pug
+++ b/views/readMoreSlides/theSolution.pug
@@ -1,6 +1,6 @@
 div.row.featurette
   div.col-md-12
-    h4.card-title The Solution: Blinky-Lite - an IoT Control System
+    h2.featurette-heading The Solution: Blinky-Lite - an IoT Control System
     h5.card-major-bullet
       | Blinky-Lite is an easily customizable control platform 
     ul
