--- a/views/readMoreSlides/applicationsPower.pug
+++ b/views/readMoreSlides/applicationsPower.pug
@@ -1,6 +1,6 @@
 div.row.featurette
   div.col-md-12
-    h4.card-title 
+    h2.featurette-heading 
       | Application Examples - Power Meter
 div.row.featurette
   div.col-md-6
