--- a/views/readMoreSlides/iot.pug
+++ b/views/readMoreSlides/iot.pug
@@ -1,6 +1,6 @@
 div.row.featurette
   div.col-md-12
-    h4.card-title The Internet of Things (IoT)
+    hh2.featurette-heading The Internet of Things (IoT)
     h5.card-major-bullet
       | Since 2010, a revolution has taken place outside the traditional controls community - the Internet of Things (IoT). 
     h5.card-major-bullet
