--- a/views/index.pug
+++ b/views/index.pug
@@ -9,6 +9,7 @@ block content
       expert developers.
     p.lead.
       Blinky-Lite takes it out of the hands of the experts andf gives controls back to you.
+    a.btn.jumbotron-button(href='/readmore') Read More
   div.container.marketing
     div.row.featurette
       div.col-md-7
