--- a/views/readmore.pug
+++ b/views/readmore.pug
@@ -1,5 +1,15 @@
 extends layout
 block content
+  .jumbotron
+    h1.display-5.text-warning BLINKY-LITE
+    h2.display-5.text-warning Instrumentation for humans
+    p.lead.
+      Digital control is at the heart of all modern R&amp;D activities, 
+      yet it remains opaque and excessively complex to all but the most 
+      expert developers.
+    p.lead.
+      Blinky-Lite takes it out of the hands of the experts andf gives controls back to you.
+    a.btn.jumbotron-button(href='/') Home
   div.container.marketing
     include readMoreSlides/theProblem.pug
     include readMoreSlides/theSolution.pug
