added tutorial link

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -24,6 +24,8 @@ html(lang='en')
               span.sr-only (current)
           li.nav-item
             a.nav-link(href='/readmore') Read More
+          li.nav-item
+            a.nav-link(href='/tutorial') Tutorial
           li.nav-item.dropdown
             a#navbarDropdownMenuLink.nav-link.dropdown-toggle(href='#' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
               | Sponsors
