--- a/views/readMoreSlides/componentsMQTT.pug
+++ b/views/readMoreSlides/componentsMQTT.pug
@@ -1,7 +1,9 @@
 div.row.featurette
-  div.col-md-7
+  div.col-md-3
+    img(src='/img/readmore/mqtt.png',width='100%') 
+  div.col-md-9
     h2.featurette-heading 
-      | Blinky-Lite Components - 
+      | Blinky-Lite Communication Protocol - 
       a(href='http://mqtt.org/', target='_blank') MQTT
     h5.card-major-bullet
       | A very popular IoT communication protocol is MQTT 
@@ -17,7 +19,5 @@ div.row.featurette
         | It is designed to be reliable, data-agnostic, and lightweight. 
       li.card-minor-bullet
         | It is quickly becoming the protocol of choice for IoT.   
-  div.col-md-5
-    img(src='/img/readmore/mqtt.png',width='100%') 
 
 hr.featurette-divider
