--- a/views/readMoreSlides/iot.pug
+++ b/views/readMoreSlides/iot.pug
@@ -1,5 +1,7 @@
 div.row.featurette
-  div.col-md-12
+  div.col-md-3
+    img(src='/img/readmore/IoT.png',width='100%') 
+  div.col-md-9
     h2.featurette-heading The Internet of Things (IoT)
     h5.card-major-bullet
       | Since 2010, a revolution has taken place outside the traditional controls community - the Internet of Things (IoT). 
