--- a/views/readmore.pug
+++ b/views/readmore.pug
@@ -9,21 +9,16 @@ block content
       expert developers.
     p.lead.
       Blinky-Lite takes it out of the hands of the experts andf gives controls back to you.
-    a.btn.jumbotron-button(href='/') Home
+    p.lead.
+      Blinky-Lite is an open source platform based on open source technology. It is not for sale. It is free.
+    a.btn.jumbotron-button(href='http://www.thequantumguys.com/controls/examples', target='_blank') Examples
   div.container.marketing
     include readMoreSlides/theProblem.pug
     include readMoreSlides/theSolution.pug
     include readMoreSlides/iot.pug
     include readMoreSlides/architecture.pug
+    include readMoreSlides/componentsMQTT.pug
+    include readMoreSlides/componentsNodeRed.pug
     include readMoreSlides/componentsRaspi.pug
     include readMoreSlides/componentsMicro.pug
-    include readMoreSlides/componentsNodeRed.pug
-    include readMoreSlides/componentsMQTT.pug
-    include readMoreSlides/applicationsKlystron.pug
-    include readMoreSlides/applicationsPower.pug
-    include readMoreSlides/applicationsBakeout.pug
-    include readMoreSlides/applicationsInterlock.pug
-    include readMoreSlides/applicationsCam.pug
-    include readMoreSlides/applicationsScale.pug
-    include readMoreSlides/applicationsScaleIndustrial.pug
     include readMoreSlides/theFuture.pug
