--- a/views/index.pug
+++ b/views/index.pug
@@ -9,6 +9,8 @@ block content
       expert developers.
     p.lead.
       Blinky-Lite takes it out of the hands of the experts andf gives controls back to you.
+    p.lead.
+      Blinky-Lite is an open source platform based on open source technology. It is not for sale. It is free.
     a.btn.jumbotron-button(href='/readmore') Read More
   div.container.marketing
     div.row.featurette
