--- a/views/layout.pug
+++ b/views/layout.pug
@@ -25,6 +25,8 @@ html(lang='en')
           li.nav-item
             a.nav-link(href='/readmore') Read More
           li.nav-item
+            a.nav-link(href='http://www.thequantumguys.com/controls/examples', target='_blank') Examples
+          li.nav-item
             a.nav-link(href='/tutorial') Tutorial
           li.nav-item.dropdown
             a#navbarDropdownMenuLink.nav-link.dropdown-toggle(href='#' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
