--- a/views/readMoreSlides/componentsNodeRed.pug
+++ b/views/readMoreSlides/componentsNodeRed.pug
@@ -1,13 +1,37 @@
 div.row.featurette
-  div.col-md-7
+  div.col-md-3
+    img(src='/img/readmore/nodeRed.png',width='100%') 
+    p
+    img(src='/img/readmore/WindowInterlockFlow.png',width='100%') 
+  div.col-md-9
     h2.featurette-heading 
-      | Blinky-Lite Components - 
+      | Blinky-Lite Programming Enviroment - 
       a(href='https://nodered.org/', target='_blank') Node-RED
     h5.card-major-bullet
-      | Node-RED is a programming tool for wiring together hardware devices, APIs and online services in new and interesting ways. 
+      | Node-RED is a programming tool for wiring together hardware devices, APIs and online services. 
+      | It provides a browser-based editor 
+    ul
+      li.card-minor-bullet
+        | that makes it easy to wire together flows using the wide range of nodes in the palette 
+      li.card-minor-bullet
+        | that can be deployed to its runtime in a single-click. 
     h5.card-major-bullet
-      | It provides a browser-based editor that makes it easy to wire together flows using the wide range of nodes in the palette that can be deployed to its runtime in a single-click. 
-  div.col-md-5
-    img(src='/img/readmore/nodeRed.png',width='100%') 
-
+      | Node-RED is built on 
+      a(href='https://en.wikipedia.org/wiki/Flow-based_programming') flow based programing
+    ul
+      li.card-minor-bullet
+        | a way of describing an application’s behavior as a network of black-boxes, or “nodes” as they are called in Node-RED. 
+      li.card-minor-bullet
+        | Each node has a well-defined purpose; it is given some data, it does something with that data and then it passes that data on. 
+      li.card-minor-bullet
+        | The network is responsible for the flow of data between the nodes.
+    h5.card-major-bullet
+      | It is a model that lends itself very well to a visual representation and makes it more accessible to a wider range of users. 
+    ul
+      li.card-minor-bullet
+        | If someone can break down a problem into discrete steps 
+      li.card-minor-bullet
+        | they can look at a flow and get a sense of what it is doing; 
+      li.card-minor-bullet
+        | without having to understand the individual lines of code within each node.
 hr.featurette-divider
