--- a/views/readMoreSlides/componentsRaspi.pug
+++ b/views/readMoreSlides/componentsRaspi.pug
@@ -1,18 +1,38 @@
 div.row.featurette
-  div.col-md-12
+  div.col-md-3
+    img(src='/img/readmore/raspi1.png',width='100%') 
+    p
+    img(src='/img/readmore/raspi4.png',width='100%') 
+  div.col-md-9
     h2.featurette-heading 
-      | Blinky-Lite Components - 
+      | Blinky-Lite Device Message Adapters - 
       a(href='https://www.raspberrypi.org/') Raspberry Pi
       span.featurette-heading  3 and Zero
-div.row.featurette
-  div.col-md-2
-    img(src='/img/readmore/raspi1.png',width='100%') 
-  div.col-md-2
-    img(src='/img/readmore/raspi2.png',width='100%') 
-  div.col-md-2
-    img(src='/img/readmore/raspi3.png',width='100%') 
-  div.col-md-2
-    img(src='/img/readmore/raspi4.png',width='100%') 
-  div.col-md-2
-    img(src='/img/readmore/raspi5.png',width='100%') 
+    h5.card-major-bullet
+      | A Raspberry Pi is a credit card-sized computer originally designed for education, inspired by the 1981 BBC Micro. 
+    ul
+      li.card-minor-bullet
+        | Creator Eben Upton's goal was to create a low-cost device that would improve programming skills and hardware understanding at the pre-university level. 
+      li.card-minor-bullet
+        | But thanks to its small size and accessible price, it was quickly adopted by tinkerers, 
+        | makers, and electronics enthusiasts for projects that require more than a basic microcontroller (such as Arduino devices).
+      li.card-minor-bullet
+        | The Raspberry Pi is slower than a modern laptop or desktop but is still a complete 
+        | Linux computer and can provide all the expected abilities that implies, at a low-power consumption level.
+    h5.card-major-bullet
+      | Processor speed ranges from 700 MHz to 1.4 GHz for the Pi 3 Model B+; on-board memory ranges from 256 MB to 1 GB RAM.
+    ul
+      li.card-minor-bullet
+        | Secure Digital (SD) cards are used to store the operating system and program memory in either SDHC or MicroSDHC sizes. 
+      li.card-minor-bullet
+        | The boards have one to four USB ports. For video output, HDMI and composite video are supported, 
+        | with a standard 3.5 mm phono jack for audio output. 
+      li.card-minor-bullet
+        | Lower-level output is provided by a number of 
+        | GPIO pins which support common protocols like I²C. 
+      li.card-minor-bullet
+        | The B-models have an 8P8C Ethernet port and the 
+        | Pi 3 and Pi Zero W have on-board Wi-Fi 802.11n and Bluetooth. 
+      li.card-minor-bullet
+        | Prices range from US$5 to $35.
 hr.featurette-divider
