--- a/views/readMoreSlides/theFuture.pug
+++ b/views/readMoreSlides/theFuture.pug
@@ -1,5 +1,7 @@
 div.row.featurette
-  div.col-md-12
+  div.col-md-3
+    img(src='/img/readmore/future.jpg',width='100%') 
+  div.col-md-9
     h2.featurette-heading The Future
     h5.card-major-bullet
       | The Ideal Control System Platform - : 
