--- a/views/readMoreSlides/theProblem.pug
+++ b/views/readMoreSlides/theProblem.pug
@@ -1,5 +1,9 @@
 div.row.featurette
-  div.col-md-12
+  div.col-md-3
+    img(src='/img/readmore/BadLabVIEW.PNG',width='100%') 
+    p
+    img(src='/img/readmore/s7Plc.jpeg',width='100%') 
+  div.col-md-9
     h2.featurette-heading The Problem
     h5.card-major-bullet
       | Today’s high-tech startup companies often require careful monitoring and control of research processes
