--- a/views/readMoreSlides/theSolution.pug
+++ b/views/readMoreSlides/theSolution.pug
@@ -1,5 +1,7 @@
 div.row.featurette
-  div.col-md-12
+  div.col-md-3
+    img(src='/img/BlinkyLogo.png',width='100%') 
+  div.col-md-9
     h2.featurette-heading The Solution: Blinky-Lite - an IoT Control System
     h5.card-major-bullet
       | Blinky-Lite is an easily customizable control platform 
