--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,7 @@ block content
       yet it remains opaque and excessively complex to all but the most 
       expert developers.
     p.lead.
-      Blinky-Lite takes it out of the hands of the experts andf gives controls back to you.
+      Blinky-Lite takes it out of the hands of the experts and gives controls back to you.
     p.lead.
       Blinky-Lite is an open source platform based on open source technology. It is not for sale. It is free.
     a.btn.jumbotron-button(href='/readmore') Read More
