--- a/views/tutorial.pug
+++ b/views/tutorial.pug
@@ -1,5 +1,14 @@
 extends layout
 block content
-  .jumbotron
-    h1.display-5.text-warning Coming Soon!
-    a.btn.jumbotron-button(href='/') Home
+  .row(align='center')
+    .col-md-3
+      .card
+        p
+        img(src='img/tutorial/RPi-Logo.png', height='200px')
+        h5.card-title Setting Up a Raspberry-Pi for Blinky-Lite
+        .card-body
+          p.card-text
+            | The Raspberry Pi computer integral component of the Blinky-Lite. 
+            | It can be used a device message controller, an MQTT broker, and a Node-RED web application
+            | this section will show you how to setup a Raspberry Pi so it can function seamlessly in Blinky-Lite
+          a.btn.card-button(href='/tutorial/setupRPi') Read More
