added RPI tutorial

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,7 +16,8 @@ html(lang='en')
         img(src="/img/BlinkyLogo-Text.png" ,height="50px")
       button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarNavDropdown' aria-controls='navbarNavDropdown' aria-expanded='false' aria-label='Toggle navigation')
         span.navbar-toggler-icon
-      #navbarNavDropdown.collapse.navbar-collapse
+      //#navbarNavDropdown.collapse.navbar-collapse
+      #navbarNavDropdown.navbar-expand
         ul.navbar-nav
           li.nav-item.active
             a.nav-link(href='/')
