--- a/views/layout.pug
+++ b/views/layout.pug
@@ -26,7 +26,7 @@ html(lang='en')
           li.nav-item
             a.nav-link(href='/readmore') Read More
           li.nav-item
-            a.nav-link(href='http://www.thequantumguys.com/controls/examples', target='_blank') Examples
+            a.nav-link(href='/examples') Examples
           li.nav-item.dropdown
             a#navbarDropdownMenuLink.nav-link.dropdown-toggle(href='#' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
               | Tutorial
