fixed some links

--- a/views/readmore.pug
+++ b/views/readmore.pug
@@ -11,7 +11,7 @@ block content
       Blinky-Lite takes it out of the hands of the experts andf gives controls back to you.
     p.lead.
       Blinky-Lite is an open source platform based on open source technology. It is not for sale. It is free.
-    a.btn.jumbotron-button(href='http://www.thequantumguys.com/controls/examples', target='_blank') Examples
+    a.btn.jumbotron-button(href='/examples') Examples
   div.container.marketing
     include readMoreSlides/theProblem.pug
     include readMoreSlides/theSolution.pug
