--- a/views/setupRPi.pug
+++ b/views/setupRPi.pug
@@ -21,7 +21,7 @@ block content
     span(style='font-size: small;')
       a(href='#contents') Table of contents
   p On Linux desktop computer, download the latest Raspberry Pi image at: 
-    a(href='https://downloads.raspberrypi.org/raspbian_latest') https://downloads.raspberrypi.org/raspbian_latest
+    a(href='https://downloads.raspberrypi.org/raspbian_latest', target='_blank') https://downloads.raspberrypi.org/raspbian_latest
     br
     | The downloaded file will have a name like 
     b YYYY-MM-DD-raspbian-stretch.zip
@@ -146,7 +146,7 @@ block content
     b Finish 
     | to exit the configuration program and reboot the RaspberryPi
   p On your linux Desktop, download the RealVNC Viewer at 
-    a(href='https://www.realvnc.com/en/connect/download/viewer/linux/') https://www.realvnc.com/en/connect/download/viewer/linux/
+    a(href='https://www.realvnc.com/en/connect/download/viewer/linux/', target='_blank') https://www.realvnc.com/en/connect/download/viewer/linux/
     br
     | We will now connect to the RaspberryPi desktop. 
     | It is easy to finish the rest of the configuration from the RaspberryPi Desktop 
@@ -205,7 +205,7 @@ block content
     code cd ~/Downloads
     br
     | In a browser go to the nodejs download page at: 
-    a(href='https://nodejs.org/en/download/') https://nodejs.org/en/download/
+    a(href='https://nodejs.org/en/download/', target='_blank') https://nodejs.org/en/download/
     | The Node.js download page will look as below:
     br
     a(href='/img/tutorial/nodejsDownload.png',target='_blank')
@@ -262,7 +262,7 @@ block content
     span(style='font-size: small;')
       a(href='#contents')  Table of contents
   p Open the VNC viewer to your Raspberry Pi and then open the web browser to the software download page: 
-    a(href='https://www.arduino.cc/en/Main/Software?') https://www.arduino.cc/en/Main/Software? 
+    a(href='https://www.arduino.cc/en/Main/Software?', target='_blank') https://www.arduino.cc/en/Main/Software? 
     ul
       li Navigate to “Download the Arduino IDE” box and click on the Linux ARM version. 
         | You will be taken to the donate page were you can donate and download the software. 
@@ -280,7 +280,7 @@ block content
       li Under the Tools menu, choose the correct port and correct board. 
       li Upload the sketch to the Arduino and see that it behaves properly.
     | You can learn more about programming the Arduino at: 
-    a(href='https://www.arduino.cc/en/Guide/HomePage') https://www.arduino.cc/en/Guide/HomePage
+    a(href='https://www.arduino.cc/en/Guide/HomePage', target='_blank') https://www.arduino.cc/en/Guide/HomePage
   hr
   h2 
     a(NAME='mqtt') Installing an MQTT Broker
@@ -291,9 +291,9 @@ block content
       | Note: it is not necessary to setup an MQTT broker on a Blinky-Lite Device Adapter or web application server. This section is for users who want to set-up their own MQTT broker. However, it does not hurt to have an MQTT broker running on any of your Raspberry-Pi’s so I usually install one as the base configuration of all my Raspberry Pi’s. 
   p
     | Their are many open source MQTT brokers 
-    a(href='https://diyprojects.io/mqtt-mosquitto-communicating-connected-objects-iot/') available 
+    a(href='https://diyprojects.io/mqtt-mosquitto-communicating-connected-objects-iot/', target='_blank') available 
     | but Blinky-Lite will use Mosquitto supported by the 
-    a(href='http://iot.eclipse.org/') Eclipse Foundation. 
+    a(href='http://iot.eclipse.org/', target='_blank') Eclipse Foundation. 
     | Open a terminal session into your Raspberry-Pi either through an ssh session from your 
     | Linux desktop RealVNC  Connection. Once you have a terminal session running on your 
     | Raspberry-Pi, install Mosquitto by typing:
