Added Blinky Circuit

--- a/views/tutorial.pug
+++ b/views/tutorial.pug
@@ -19,3 +19,11 @@ block content
             | this section will show you how to setup a Raspberry Pi so it can function seamlessly in Blinky-Lite
           a.btn.card-button(href='/tutorial/setupRPi') Read More
     .col-md-6
+      .card
+        p
+        img(src='img/tutorial/blinky-breadboard.png', height='200px')
+        h5.card-title Constructing a Blinky-Lite Circuit
+        .card-body
+          p.card-text
+            | This section will show the circuit diagram and parts list needed to build an example Blinky-Lite circuit
+          a.btn.card-button(href='/tutorial/blinkyCircuit') Read More
