--- a/views/layout.pug
+++ b/views/layout.pug
@@ -33,6 +33,7 @@ html(lang='en')
             .dropdown-menu(aria-labelledby='navbarDropdownMenuLink')
               a.dropdown-item(href='/tutorial') Overview
               a.dropdown-item(href='/tutorial/setupRPi') Setting Up a Raspberry-Pi for Blinky-Lite
+              a.dropdown-item(href='/tutorial/blinkyCircuit') Constructing a Blinky-Lite Circuit
           li.nav-item.dropdown
             a#navbarDropdownMenuLink.nav-link.dropdown-toggle(href='#' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
               | Sponsors
