--- a/views/blinkyCircuit.pug
+++ b/views/blinkyCircuit.pug
@@ -2,6 +2,7 @@ extends layout
 block content
   .jumbotron
     h1.text-warning Constructing a Blinky-Lite Circuit
+    p This section will show the circuit diagram and parts list needed to build an example Blinky-Lite circuit.
     h2 
       a(NAME='contents') Table of Contents
     p
