--- a/views/setupRPi.pug
+++ b/views/setupRPi.pug
@@ -2,6 +2,9 @@ extends layout
 block content
   .jumbotron
     h1.text-warning Setting Up a Raspberry-Pi for Blinky-Lite
+    p The Raspberry Pi computer integral component of the Blinky-Lite. 
+      | It can be used a device message controller, an MQTT broker, and a Node-RED web application 
+      | This section will show you how to setup a Raspberry Pi so it can function seamlessly in Blinky-Lite.
     h2 
       a(NAME='contents') Table of Contents
     p
