--- a/views/tutorial.pug
+++ b/views/tutorial.pug
@@ -16,7 +16,7 @@ block content
           p.card-text
             | The Raspberry Pi computer integral component of the Blinky-Lite. 
             | It can be used a device message controller, an MQTT broker, and a Node-RED web application
-            | this section will show you how to setup a Raspberry Pi so it can function seamlessly in Blinky-Lite
+            | This section will show you how to setup a Raspberry Pi so it can function seamlessly in Blinky-Lite
           a.btn.card-button(href='/tutorial/setupRPi') Read More
     .col-md-6
       .card
@@ -27,3 +27,13 @@ block content
           p.card-text
             | This section will show the circuit diagram and parts list needed to build an example Blinky-Lite circuit
           a.btn.card-button(href='/tutorial/blinkyCircuit') Read More
+    .col-md-6
+      .card
+        p
+        img(src='img/tutorial/dmaRedFlowCrop.png', height='200px')
+        h5.card-title Building a Device Message Adapter (DMA)
+        .card-body
+          p.card-text
+            | This section will show you how to build a Device Message Adapter (DMA) in Node-Red on a Raspberry-Pi.
+            | The DMA is the interface between the MQTT broker and the device you want to control.
+          a.btn.card-button(href='/tutorial/dma') Read More
