--- a/views/layout.pug
+++ b/views/layout.pug
@@ -34,7 +34,7 @@ html(lang='en')
               a.dropdown-item(href='/tutorial') Overview
               a.dropdown-item(href='/tutorial/setupRPi') Setting Up a Raspberry-Pi for Blinky-Lite
               a.dropdown-item(href='/tutorial/blinkyCircuit') Constructing a Blinky-Lite Circuit
-              a.dropdown-item(href='/tutorial/dma') Constructing a DMA
+              a.dropdown-item(href='/tutorial/dma') Building a Device Message Adapter (DMA)
           li.nav-item.dropdown
             a#navbarDropdownMenuLink.nav-link.dropdown-toggle(href='#' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
               | Sponsors
