--- a/views/blinkyCircuit.pug
+++ b/views/blinkyCircuit.pug
@@ -78,7 +78,7 @@ block content
     | . Build the following circuit with the above components. you can find the 
     a(href='http://fritzing.org/home/', target='_blank') Fritzing 
     | file 
-    a(href='/img/tutorial/device-schemtatic.fzz', target='_blank') here
+    a(href='https://github.com/Blinky-Lite/blinky-lite-tutorial/blob/drawings/device-schemtatic.fzz?raw=true', target='_blank') here
     | .
   .row
     .col-md-6
