--- a/views/dma.pug
+++ b/views/dma.pug
@@ -31,7 +31,7 @@ block content
     | ) we can customize our application. In addition, Node-RED has a settings.js file 
     | in which security settings are set that we would also like to customize. 
     | At Blinky-Lite, we have come up with a 
-    a(href='/img/tutorial/empty-node-red.zip') blank template Adding Flows To Node-RED
+    a(href='/img/tutorial/empty-node-red.zip') blank template 
     | to get us started.
     br
     | Log into the Raspberry-Pi that is connected to the Arduino Uno. 
