fixed more typos

--- a/views/dma.pug
+++ b/views/dma.pug
@@ -62,7 +62,7 @@ block content
     code cd blinky-lite-tutorial-dma
     br
     | And install the node-red program by typing: 
-    brRunning Node-Red on a Raspberry-Pi
+    br
     code npm install
     br
     | The required node-modules will be installed. This might take awhile if you are using  a Raspberry-Pi Zero.
@@ -76,7 +76,7 @@ block content
     b
       i .env
     | .  Normally you want a different key for every application and you do not want to store this key publically so the 
-    bAdding Flows To Node-RED
+    b
       i .env 
     | file is not included with the template. To create the 
     b
@@ -108,7 +108,7 @@ block content
     | You can kill the program any time by typing 
     b 
       i Ctrl-c. 
-    | However, leave the program running and on another computer on youhttp://www.blinky-lite.org/tutorial/dmar local wireless network 
+    | However, leave the program running and on another computer on your local wireless network 
     | (i.e. your desktop computer), open a browser (Chrome or Firefox recommended - 
     b never IE !
     | ) type the following address: 
