fixed more typos

--- a/views/dma.pug
+++ b/views/dma.pug
@@ -39,7 +39,7 @@ block content
     br
     code wget https://github.com/Blinky-Lite/blinky-lite-tutorial/archive/empty-node-red.zip
     br
-    | Unzip the file:http://www.blinky-lite.org/tutorial/dma
+    | Unzip the file
     br
     code unzip empty-node-red.zip
     br
@@ -113,7 +113,7 @@ block content
     b never IE !
     | ) type the following address: 
     br
-    code http://http://www.blinky-lite.org/tutorial/dma
+    code http:
       b
         i host-name
       | .local:1880/
